# datasette-examples

./: pyproject.toml
datasette_examples/: __init__.py
tests/: test_examples.py
